syntax = "proto3";

import "proc/proc.proto";
import "sigmap/sigmap.proto";

option go_package = "sigmaos/sched/msched/proc/proto";

message RunReq {
  ProcProto procProto = 1;
}

message RunRep {
}

message WarmBinReq {
  string realmStr = 1;
  string program = 2;
  string pidStr = 3;
  repeated string sigmaPath = 4;
  SecretProto s3Secret = 5;
  TendpointProto NamedEndpointProto = 6;
}

message WarmBinRep {
  bool oK = 1;
}

message FetchReq {
   string prog = 1;
   int32 chunkId = 2;
   uint64 size = 3;
   uint32 pid = 4;
}

message FetchRep {
  uint64 size = 1;
}

message LookupReq {
   string prog = 1;
   uint32 pid = 2;
}

message LookupRep {
  TstatProto stat = 1;
}
